--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <ul class="menu_main">
             <li class="menu-icon menu-icons"><button class="icon">WHY US</button></li>
             <li class="menu-icon "><button class="icon">VPN APPS</button></li>
-            <li class="menu-icon menu-icons"><button class="icon">SUPPORT</button></li>
-            <li class="menu-icon menu-icons"><button class="icon">RESSOURCES</button></li>
+            <li class="menu-icon menu-icons"><button class="icon">WHY US</button></li>
+            <li class="menu-icon menu-icons"><button class="icon">WHY US</button></li>
         </ul>
     </div>
     <div class="empty"></div>
